# ESGI-RustPractice

./: Cargo.toml  README.md  Test 1  Test 2
TP0/: Cargo.toml
TP0/src/: goodPractice.rs  main.rs  tp1.rs
journalisation_server/: Cargo.toml
journalisation_server/src/: client.rs  main.rs  test_concurrent.rs
src/: analyseur_trame.rs  data.txt  ecrivain.rs  gestionnaire_fichiers.rs  main.rs  securite.txt  session_principale.txt  temps_reel.txt  tp1.rs
tp7_dns_simple/: Cargo.toml
tp7_dns_simple/src/: client.rs  lib.rs  serveur.rs
tp8_protocole_personnalise/: Cargo.toml
tp8_protocole_personnalise/src/: client.rs  lib.rs  main.rs  serveur.rs
tp9_websocket/: Cargo.toml
tp9_websocket/src/: client.rs  lib.rs  main.rs  serveur.rs
