[package]
name = "journalisation_server"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "test_concurrent"
path = "src/test_concurrent.rs"


[dependencies]
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }


